# summerhackfest-2025

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: submission.yml
docs/: 00_overview.md  01_rules.md  04_judging_criteria.md  05_resources.md  06_submission_checklist.md  07_submission-guide.md  08_terms-and-conditions.md
projects/: README.md
projects/FluxSub/: .gitignore  CONTRIBUTING.md  LICENSE  README.md
projects/Forlux/: LICENSE  PROJECT_SUMMARY.md  README.md
projects/Hackafest/: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package.json  project-structure.md
projects/QuizCraft/: README.md
projects/TreasuryDaoAI/: README.md
projects/app/: package-lock.json  package.json
projects/chainbrawler/: .gitignore  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  Dockerfile  HACKATHON_README.md  LICENSE  README.md  SUBMISSION_CHECKLIST.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
projects/conflux-box/: .gitignore  .npmrc  CONTRIBUTING.md  (+11 more)
projects/picker/rust-agent-crate/: Cargo.toml  README.md
projects/picker/rust-agent-crate/examples/: agent_example.rs  mcp_agent_chatbot.rs  simple_chatbot.rs
projects/picker/rust-agent-crate/src/: lib.rs
projects/picker/rust-agent-crate/src/agents/: agent.rs  mcp_agent.rs
projects/picker/rust-agent-crate/src/core/: runnable.rs
projects/picker/rust-agent-crate/src/mcp/: client.rs  mod.rs  server.rs
projects/picker/rust-agent-crate/src/memory/: base.rs  mod.rs
projects/picker/rust-agent-crate/src/models/: chat.rs  message.rs  openai.rs
projects/picker/rust-agent-crate/src/tools/: utils.rs
projects/picker/server/: Cargo.toml  config.toml  spec.md
projects/picker/server/src/: config.rs  database.rs  download.rs  main.rs  openapi.rs  utils.rs
projects/picker/server/src/handlers/: mod.rs  orders.rs  pickers.rs  users.rs
projects/picker/server/tests/: integration_tests.rs
templates/: project_readme.md
(+685 files in other folders)
